--- a/ScheduleLife.html
+++ b/ScheduleLife.html
@@ -3,18 +3,21 @@
   <html>
   <head>
   <title>ScheduleLife</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <style>
-  table {
-     width: 100%;
-     border: 1px solid blue;
+  h1 {
+    text-align: center;
+  }
+  table.table {
+     width: 70%;
+     margin: 45px auto;
   }
 
   td {
      width: 25%;
-     border: 1px solid black;
   }
 
-  td.active {
+  td.attending {
   background-color: green
   }
   </style>
@@ -22,7 +25,8 @@
    </script>
   </head>
   <body>
-  <table>
+    <h1>ScheduleLife</h1>
+  <table class="table table-bordered">
   <thead>
   </thead>
    <tbody>
@@ -73,7 +77,7 @@
    $("tr.friend-row td.time").click(function () {
      console.log($(this))
      var $el = $(this);
-     $el.toggleClass("active")
+     $el.toggleClass("attending")
    })
 });
    </script>
