--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     float: left;
     width: 150px;
   }
-  .event-modal-button {
+  .add-buttons {
     float: right;
   }
   </style>
@@ -54,7 +54,10 @@
     <div class="page">
     <h1>ScheduleLife</h1>
     <div class="table-buttons cf">
-      <button type="button" class="btn btn-default event-modal-button" data-toggle="modal" data-target="#myModal">Add Event</button>
+      <div class="add-buttons">
+      <button type="button" class="btn btn-default btn-primary friend-modal-button" data-toggle="modal" data-target="#friendModal">Add Friend</button>
+      <button type="button" class="btn btn-default btn-primary event-modal-button" data-toggle="modal" data-target="#myModal">Add Event</button>
+    </div>
       <div class="input-group date date-select-button">
           <input type="text" class="form-control">
           <div class="input-group-addon">
@@ -82,6 +85,30 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary add-event-button">Add Event</button>
+        </div>
+      </div>
+    </div>
+    </div>
+
+
+    <div class="modal fade" id="friendModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Add Friend</h4>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="friendname ">Friend Name</label>
+              <input type="text" class="form-control" id="friendname" placeholder="Friend name">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary add-friend-button">Add Friend</button>
         </div>
       </div>
     </div>
@@ -127,8 +154,18 @@
        }
      }
 
-    function drawTable () {
+     function drawTableOrMessage() {
        var filteredEvents = getEventsByDate(events, selectedDate);
+        if (filteredEvents.length === 0) {
+          $msg = $('<div class="alert alert-info" role="alert"><p>There are no events for this date. Add an event to get started!</p> </div>')
+          $('.table-container').html($msg)
+        } else {
+          drawTable(filteredEvents)
+        }
+
+     }
+
+    function drawTable (filteredEvents) {
        var $table = $('<table class="table table-bordered events-table"></table>')
 
        var $userRow = $('<tr class="user-row"><td>You</td></tr>');
@@ -192,7 +229,7 @@
        // hack to get a unique id
        var id = new Date().getTime();
        events.push({id: id, title: eventName, date:selectedDate});
-       drawTable();
+       drawTableOrMessage();
        localStorage.setItem('scheduleLifeEvents', JSON.stringify(events))
        $('#myModal #eventname').val('');
        $('#myModal').modal('hide')
@@ -211,6 +248,19 @@
            //$row.append($cell)
        //}
      });
+
+     $(".add-friend-button").on("click", function () {
+       // get friend data
+       var friendNameInput = $('#friendModal #friendname');
+       var friendName = friendNameInput.val();
+       var id = new Date().getTime();
+       friends.push({id: id, name: friendName});
+       drawTableOrMessage();
+       localStorage.setItem('scheduleLifeEvents', JSON.stringify(events))
+       friendNameInput.val('');
+       $('#friendModal').modal('hide')
+     });
+
      $('.date-select-button').datepicker(
        {
          autoclose: true,
@@ -219,7 +269,7 @@
        }
      ).on('changeDate', function(e) {
         selectedDate = new Date(e.date).toDateString();
-        drawTable();
+        drawTableOrMessage();
      });
 
      $('.date-select-button').datepicker('setDate', selectedDate)
